[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scripts/autoloads/pause_menu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -116.0
margin_right = -11.0
margin_bottom = 132.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true
}

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 105.0
margin_bottom = 20.0
text = "Resume"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 105.0
margin_bottom = 48.0
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 105.0
margin_bottom = 76.0
text = "Load"

[node name="ReloadWithoutShaderCache" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 84.0
margin_right = 105.0
margin_bottom = 104.0
text = "Reload"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 112.0
margin_right = 105.0
margin_bottom = 132.0
text = "Quit"
